# PDB

./: .gitignore  README.md  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/lib/components/: ArticleView.svelte  Breadcrumbs.svelte  CategoryView.svelte  Editor.svelte  IconPicker.svelte  QuickSwitcher.svelte  SearchBar.svelte  Toast.svelte  TreeNav.svelte
src/lib/stores/: db.ts  dragState.ts  toast.ts
src/routes/: +page.svelte
