[package]
name = "pdb"
version = "1.0.0"
description = "Personal Database - A Wikipedia-style knowledge management app"
authors = ["User"]
edition = "2021"

[lib]
name = "pdb_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
dirs-next = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
